fix backend get artist by id
